updated plugin, token moves along arc, place token nums don't update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mc",
+  "name": "pendes",
   "scripts": {
     "start": "node app.js",
     "test": "node ./node_modules/mocha/bin/mocha --recursive test",
